# defichain_scripts

./: LICENSE  README.md  pyproject.toml
defichainScripts/stats/: burn_fee_ni.py  dTokenNumbersOnDVM.py  vaults.py
defichainScripts/track/: track.py
src/: DexFee_and_NI.py  burn_Fee+NI.py  dTokenNumbersOnDVM.py
